--- a/about.html
+++ b/about.html
@@ -69,8 +69,8 @@
     
     <!-- Start Entry -->
     <p>毕业于东华理工大学软件工程系<br/>
-	iOS自由开发者, 儿子, 丈夫, 两个女儿的父亲<br/>
-	个人作品链接: http://605studio.info</p>
+	iOS自由开发者, 儿子, 丈夫, 两个女儿的父亲<br/><br/>
+	<a href = "mailto:zzymoon@gmail.com">联系我</a></p>
 
 
 <div class="symple-clear-floats"></div>
