--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Euclid Free Responsive Html5 Themes</title>
+<title>ZY Apps</title>
 
 <link rel='stylesheet' id='reset-css'  href='css/reset.css' type='text/css' media='all' />
 <link rel='stylesheet' id='superfish-css'  href='css/superfish.css' type='text/css' media='all' />
@@ -70,7 +70,7 @@
     <!-- Start Entry -->
     <p>毕业于东华理工大学软件工程系<br/>
 	iOS自由开发者, 儿子, 丈夫, 两个女儿的父亲<br/><br/>
-	<a href = "mailto:zzymoon@gmail.com">联系我</a></p>
+	<a style="" href = "mailto:zzymoon@gmail.com">联系我</a></p>
 
 
 <div class="symple-clear-floats"></div>
