--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Euclid Free Responsive Html5 Themes</title>
+<title>ZY Apps</title>
 
 <link rel='stylesheet' id='reset-css'  href='css/reset.css' type='text/css' media='all' />
 <link rel='stylesheet' id='superfish-css'  href='css/superfish.css' type='text/css' media='all' />
