--- a/index.html
+++ b/index.html
@@ -668,5 +668,5 @@ Ut id magna eu eros vehicula sollicitudin at et odio. Mauris consectetur tortor 
 
 
 </body>
-
+<script src="http://v1.cnzz.com/z_stat.php?id=1000394552&web_id=1000394552" language="JavaScript"></script>
 </html>
