add flag counter

--- a/index.html
+++ b/index.html
@@ -657,7 +657,10 @@ Ut id magna eu eros vehicula sollicitudin at et odio. Mauris consectetur tortor 
             <!-- End Footer Copyright -->
             
             <!-- Footer Logo -->
-			<img src="images/footer-logo.png" id="footer-logo" />
+			<div id="footer-logo">
+			<a href="http://info.flagcounter.com/5xjC"><img src="http://s09.flagcounter.com/count/5xjC/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_4/viewers_3/labels_0/pageviews_0/flags_0/" alt="Flag Counter" border="0"></a></div>
+
+			<!--img src="images/footer-logo.png" id="footer-logo" /-->
             <!-- End Footer Logo -->
         
         <div class="clear"></div>
@@ -670,5 +673,6 @@ Ut id magna eu eros vehicula sollicitudin at et odio. Mauris consectetur tortor 
 </body>
 <div style="display:none">
 <script src="http://v1.cnzz.com/z_stat.php?id=1000394552&web_id=1000394552" language="JavaScript"></script>
+
 </div>
 </html>
