--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 			margin-bottom:44px;
 			border-radius:30px;
 		}
-
+	.cd-project-info, A {
+		text-align:center;
+	}
 #AppStore{
 	margin-top:44px;
 }
@@ -30,91 +32,99 @@
 			<li class="cd-single-project">
 				<div class="cd-title">
 
-					<img id="AppIcon" src="img/zdy/appicon.jpg" />
+<!--					<img id="AppIcon" src="img/zdy/appicon.jpg" />-->
 					<h2>完美身材 for 郑多燕</h2>
 					<p>想瘦? 想拥有完美身材? 来跳郑多燕健身操吧!</p>
-					<a href="https://itunes.apple.com/app/apple-store/id875699288?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+
 				</div> <!-- .cd-title -->
 
 				<div class="cd-project-info">
-					<pre>
+					<p>
 					郑多燕，韩国健身明星。被称为韩国辣妈，韩国最火健身女皇，出生于1966年11月27日，目前身高162公分、体重49公斤的她是2个孩子 (14与15岁) 的母亲。婚后从原本48公斤的苗条身材一路增加到超过70公斤的臃肿身材，不过在医生建议与教练指导下展开瘦身运动，经过一连串尝试之后，又恢复到49公斤的健美身材，因而被喻为是“奇迹的肉体”、“健康肉体美辣妈”。
 
-					===========
-					包含以下高清内容:
-					1、郑多燕健身舞第一集—有氧操 (已下载, 适合整体肥胖的姐妹练习, 整体塑形)
-					2、郑多燕健身舞第二集—哑铃操 (可下载, 想减手臂的人可以放心跳)
-					3、郑多燕健身舞第三集—塑身操 (可下载, 雕塑身形，对身姿的挺拔、优雅气质的锤炼也很有帮助)
-					4、郑多燕健身舞第四集—座上操 (可下载, 锻炼腹部的内脏部分，防止下垂)
-					5、郑多燕健身舞第五集—大球操(腹部) (可下载, 瘦腹部)
-					6、郑多燕健身舞第六集—大球操(全身) (可下载, 全身运动)
-					7、郑多燕健身舞第七集—腿部臀部操 (可下载, 甩油操, 针对臀部的及腿部的锻炼)
-					
+					<br />
+					包含以下高清内容:<br />
+					1、郑多燕健身舞第一集—有氧操 (已下载, 适合整体肥胖的姐妹练习, 整体塑形)<br />
+					2、郑多燕健身舞第二集—哑铃操 (可下载, 想减手臂的人可以放心跳)<br />
+					3、郑多燕健身舞第三集—塑身操 (可下载, 雕塑身形，对身姿的挺拔、优雅气质的锤炼也很有帮助)<br />
+					4、郑多燕健身舞第四集—座上操 (可下载, 锻炼腹部的内脏部分，防止下垂)<br />
+					5、郑多燕健身舞第五集—大球操(腹部) (可下载, 瘦腹部)<br />
+					6、郑多燕健身舞第六集—大球操(全身) (可下载, 全身运动)<br />
+					7、郑多燕健身舞第七集—腿部臀部操 (可下载, 甩油操, 针对臀部的及腿部的锻炼)<br />
+					<br />
 					每天坚持15-30分钟, 你也可以拥有最完美的身材!
-					</pre>
+					</p>
+					<br/>
+					<a href="https://itunes.apple.com/app/apple-store/id875699288?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
 				</div> <!-- .cd-project-info -->
 			</li>
 
 <li class="cd-single-project">
 	<div class="cd-title">
-		<img id="AppIcon" src="img/clock/appicon.jpg" />
+<!--		<img id="AppIcon" src="img/clock/appicon.jpg" />-->
 
 		<h2>最美时钟</h2>
 		<p>这可能是你见过的最好看的时钟-没有之一!</p>
-		<a href="https://itunes.apple.com/app/apple-store/id719612715?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+
 	</div> <!-- .cd-title -->
 
 	<div class="cd-project-info">
-		<pre>
-			Best weather clock app in App Store
-			Nice bold clean graphics looks great accurate an I check back with it through out the day love it
-			--by Johnnyp3301
-
-			Best Clock App I Have Seen
-			This app is fantastic and exactly what I was looking for for my work desktop. There is even a very nerdy clock face with alternative mathematical notations for the numbers on the face. The only thing it is missing is a digital face but at this point I don't even care. Looks great on my 6+ in landscape mode!
-			--by graphitical
-
-			It's about Time.
-			This is a very attractive product. Uses little power, lot of different features enabling one to get just the look. It is well worth a look/see.
-			--by cadcts
-		</pre>
+		<p>
+			Best weather clock app in App Store<br />
+			Nice bold clean graphics looks great accurate an I check back with it through out the day love it<br />
+			--by Johnnyp3301<br />
+<br />
+			Best Clock App I Have Seen<br />
+			This app is fantastic and exactly what I was looking for for my work desktop. There is even a very nerdy clock face with alternative mathematical notations for the numbers on the face. The only thing it is missing is a digital face but at this point I don't even care. Looks great on my 6+ in landscape mode!<br />
+			--by graphitical<br />
+<br />
+			It's about Time.<br />
+			This is a very attractive product. Uses little power, lot of different features enabling one to get just the look. It is well worth a look/see.<br />
+			--by cadcts<br />
+		</p>
+		<a href="https://itunes.apple.com/app/apple-store/id719612715?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
 	</div> <!-- .cd-project-info -->
 </li>
 
 <li class="cd-single-project">
 	<div class="cd-title">
-		<img id="AppIcon" src="img/agecamera/appicon.jpg" />
+<!--		<img id="AppIcon" src="img/agecamera/appicon.jpg" />-->
 
 		<h2>颜龄相机</h2>
 		<p>你看来向多大?</p>
-		<a href="https://itunes.apple.com/app/apple-store/id1018156659?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+
 
 	</div> <!-- .cd-title -->
 
 	<div class="cd-project-info">
-		<pre>
-			通过图片或者拍照检测你的性别, 年龄及微笑程度.
-
+		<p>
+			通过图片或者拍照检测你的性别, 年龄及微笑程度.<br />
 
 			颜龄相机利用人脸检测、识别、分析和重建技术，通过融合机器视觉、机器学习、大数据挖掘及3D图形学技术分析出图像中人物的性别, 大致的年龄及微笑程度等信息, 不一定完全准确.
-		</pre>
+		</p>
+		<br/>
+		<a href="https://itunes.apple.com/app/apple-store/id1018156659?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
 	</div> <!-- .cd-project-info -->
 </li>
 
 <li class="cd-single-project">
 	<div class="cd-title">
-		<img id="AppIcon" src="img/fontpreview/appicon.jpg" />
+<!--		<img id="AppIcon" src="img/fontpview/appicon.jpg" />-->
 
 		<h2>字体预览</h2>
 		<p>是的, 预览所有字体, 包括第三方字体!</p>
-		<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+
 
 	</div> <!-- .cd-title -->
 
 	<div class="cd-project-info">
-		<pre>
+		<p>
 			直接点进去看吧.
-		</pre>
+
+
+		</p>
+		<br />
+		<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
 	</div> <!-- .cd-project-info -->
 </li>
 		</ul>
