--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		text-align:center;
 	}
 #AppStore{
+	background-image:url("./img/app_store.svg");
 	margin-top:44px;
 }
 
@@ -55,7 +56,7 @@
 					每天坚持15-30分钟, 你也可以拥有最完美的身材!
 					</p>
 					<br/>
-					<a href="https://itunes.apple.com/app/apple-store/id875699288?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+					<a href="https://itunes.apple.com/app/apple-store/id875699288?pt=1855462&ct=ZuYuanWebSite&mt=8"><div id="AppStore"></div></a>
 				</div> <!-- .cd-project-info -->
 			</li>
 
