--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		text-align:center;
 	}
 #AppStore{
-	background-image:url("./img/app_store.svg");
+	background-image:url("./img/AppStore.jpg");
 	margin-top:44px;
 }
 
