--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			This is a very attractive product. Uses little power, lot of different features enabling one to get just the look. It is well worth a look/see.<br />
 			--by cadcts<br />
 		</p>
-		<a href="https://itunes.apple.com/app/apple-store/id719612715?pt=1855462&ct=ZuYuanWebSite&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+		<a href="https://itunes.apple.com/app/apple-store/id719612715?pt=1855462&ct=ZuYuanWebSite&mt=8"><div id="AppStore"></div></a>
 	</div> <!-- .cd-project-info -->
 </li>
 
@@ -104,7 +104,7 @@
 			颜龄相机利用人脸检测、识别、分析和重建技术，通过融合机器视觉、机器学习、大数据挖掘及3D图形学技术分析出图像中人物的性别, 大致的年龄及微笑程度等信息, 不一定完全准确.
 		</p>
 		<br/>
-		<a href="https://itunes.apple.com/app/apple-store/id1018156659?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+		<a href="https://itunes.apple.com/app/apple-store/id1018156659?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
 	</div> <!-- .cd-project-info -->
 </li>
 
@@ -125,7 +125,7 @@
 
 		</p>
 		<br />
-		<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><img id="AppStore" src="img/app_store.svg" /></a>
+		<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
 	</div> <!-- .cd-project-info -->
 </li>
 		</ul>
