--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-
-				<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Merriweather:400italic,400' rel='stylesheet' type='text/css'>
+			<meta name="apple-itunes-app" content="app-id=875699288, affiliate-data=ZuYuanWebSite, app-argument=myclock">
+				<!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Merriweather:400italic,400' rel='stylesheet' type='text/css'> -->
 
 					<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 						<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
@@ -124,8 +124,8 @@
 					<div class="cd-project-info">
 						<p>
 						直接点进去看吧.
-						
-						
+
+
 						</p>
 						<br />
 						<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
