--- a/a.html
+++ b/a.html
@@ -7,12 +7,36 @@
 		<div id="youkuplayer"></div>
 		<script type="text/javascript" src="https://players.youku.com/jsapi"></script>
 		<script type="text/javascript">
-			player = new YKU.Player('youkuplayer', {
-									styleid: '0',
-									autoplay: true,
-									client_id: 'a378c8623c87f8c0',
-									vid: 'XMTc4MjUwMjcwOA==',
-									embsig: '1_1483431023_835260e9780da22a51543c404451be76'
-									});
+			var QueryString = function () {
+				// This function is anonymous, is executed immediately and
+				// the return value is assigned to QueryString!
+				var query_string = {};
+				var query = window.location.search.substring(1);
+				var vars = query.split("&");
+				for (var i=0;i<vars.length;i++) {
+					var pair = vars[i].split("=");
+					// If first entry with this name
+					if (typeof query_string[pair[0]] === "undefined") {
+      query_string[pair[0]] = decodeURIComponent(pair[1]);
+	  // If second entry with this name
+					} else if (typeof query_string[pair[0]] === "string") {
+      var arr = [ query_string[pair[0]],decodeURIComponent(pair[1]) ];
+	  query_string[pair[0]] = arr;
+	  // If third or later entry with this name
+					} else {
+      query_string[pair[0]].push(decodeURIComponent(pair[1]));
+					}
+				}
+				return query_string;
+			}();
+
+		player = new YKU.Player('youkuplayer', {
+								styleid: '0',
+								autoplay: true,
+								client_id: 'a378c8623c87f8c0',
+								vid: QueryString.vid,
+								embsig: QueryString.embsig
+								});
+
 			</script>
 	</body></html>
