--- a/unrar.html
+++ b/unrar.html
@@ -1,22 +1,32 @@
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />
-	</head>
-	<body style="margin:0">
-		<div style="width: 200px; height: 40px; background-color:#eee;margin:0 auto;margin-top:100px;"><a href="./download/Unrar4iOS.framework.zip"> 下载 Unrar4iOS.framework </div>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi" />
+</head>
+<body style="margin:0">
+	<div style="width: 70%; margin: 0 auto;">
+		<div style="width: 200px; height: 40px; background-color:#eee;margin:0 auto;margin-top:30px;">
+			<a href="./download/Unrar4iOS.framework.zip"> 下载 Unrar4iOS.framework </a>
+		</div>
 
-<br/>
-			<div>
-		<script type="text/javascript">
-    google_ad_client = "ca-pub-0702113122788244";
-    google_ad_slot = "7955979909";
-    google_ad_width = 300;
-    google_ad_height = 600;
-</script>
+		<ul>
+			<li> Bitcode 已解决Archive问题 </li>
+			<li> Swift 项目可集成 </li>
+			<li> 支持arm64, armv7, x86 </li>
+		</ul>
+		<br/>
+	</div>
+	<div>
+
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- zhouzuyuan.cn -->
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-0702113122788244"
+     data-ad-slot="7955979909"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+<div style="margin:0 auto; width: 200px;">有问题请联系: <a href="mailto:zzymoon@gmail.com">联系ZY</a></div>
 	</body></html>
