--- a/unrar.html
+++ b/unrar.html
@@ -14,10 +14,10 @@
 			<li> Swift 项目可集成 </li>
 			<li> 支持arm64, armv7, x86 </li>
 		</ul>
-		<br/>
+
 	</div>
 	<div>
-<div algin="center">
+<div algin="center" style="width: 300px;height:600px; margin: 0 auto;">
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- zhouzuyuan.cn -->
 <ins class="adsbygoogle"
