--- a/index.html
+++ b/index.html
@@ -92,27 +92,6 @@
 
 				<li class="cd-single-project">
 					<div class="cd-title">
-						<!--		<img id="AppIcon" src="img/agecamera/appicon.jpg" />-->
-
-						<h2>颜龄相机</h2>
-						<p>你看来向多大?</p>
-
-
-					</div> <!-- .cd-title -->
-
-					<div class="cd-project-info">
-						<p>
-						通过图片或者拍照检测你的性别, 年龄及微笑程度.<br />
-
-						颜龄相机利用人脸检测、识别、分析和重建技术，通过融合机器视觉、机器学习、大数据挖掘及3D图形学技术分析出图像中人物的性别, 大致的年龄及微笑程度等信息, 不一定完全准确.
-						</p>
-						<br/>
-						<a href="https://itunes.apple.com/app/apple-store/id1018156659?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
-					</div> <!-- .cd-project-info -->
-				</li>
-
-				<li class="cd-single-project">
-					<div class="cd-title">
 						<!--		<img id="AppIcon" src="img/fontpview/appicon.jpg" />-->
 
 						<h2>字体预览</h2>
@@ -129,6 +108,26 @@
 						</p>
 						<br />
 						<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
+					</div> <!-- .cd-project-info -->
+				</li>
+				<li class="cd-single-project">
+					<div class="cd-title">
+						<!--		<img id="AppIcon" src="img/fontpview/appicon.jpg" />-->
+
+						<h2>字体大全</h2>
+						<p>是的, 下载安装预览1000种字体!</p>
+
+
+					</div> <!-- .cd-title -->
+
+					<div class="cd-project-info">
+						<p>
+						直接点进去看吧.
+
+
+						</p>
+						<br />
+						<a href="https://itunes.apple.com/us/app/fontshow/id1217361219?ls=1&mt=8"><div id="AppStore"></div></a>
 					</div> <!-- .cd-project-info -->
 				</li>
 			</ul>
