--- a/index.html
+++ b/index.html
@@ -94,20 +94,20 @@
 					<div class="cd-title">
 						<!--		<img id="AppIcon" src="img/fontpview/appicon.jpg" />-->
 
-						<h2>字体预览</h2>
-						<p>是的, 预览所有字体, 包括第三方字体!</p>
+						<h2>影子火箭</h2>
+						<p>Ping Tool 测试网络连通性及访问速度</p>
 
 
 					</div> <!-- .cd-title -->
 
 					<div class="cd-project-info">
 						<p>
-						直接点进去看吧.
+						影子火箭(Ping Tool) 是一个可以在手机上测试网络连通性及访问速度的工具, 注意: 这不是一个VPN工具.
 
 
 						</p>
 						<br />
-						<a href="https://itunes.apple.com/app/apple-store/id584662780?pt=1855462&ct=QQShare&mt=8"><div id="AppStore"></div></a>
+						<a href="https://itunes.apple.com/app/apple-store/id1475080037"><div id="AppStore"></div></a>
 					</div> <!-- .cd-project-info -->
 				</li>
 				<li class="cd-single-project">
