--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 						</p>
 						<br/>
 						<a href="https://itunes.apple.com/app/apple-store/id875699288?pt=1855462&ct=ZuYuanWebSite&mt=8"><div id="AppStore"></div></a>
+
+						<br />
+						<div style="z-index:1;position: relative; align:center;">
+							<a href="mailto:zy@zhouzuyuan.cn">Contact developer</a>
+						</div>
+
 					</div> <!-- .cd-project-info -->
 				</li>
 
@@ -87,6 +93,12 @@
 						--by cadcts<br />
 						</p>
 						<a href="https://itunes.apple.com/app/apple-store/id719612715?pt=1855462&ct=ZuYuanWebSite&mt=8"><div id="AppStore"></div></a>
+
+						<br />
+						<div style="z-index:1;position: relative; align:center;">
+							<a href="mailto:zy@zhouzuyuan.cn">Contact developer</a>
+						</div>
+
 					</div> <!-- .cd-project-info -->
 				</li>
 
@@ -108,6 +120,11 @@
 						</p>
 						<br />
 						<a href="https://itunes.apple.com/app/apple-store/id1475080037"><div id="AppStore"></div></a>
+
+						<br />
+						<div style="z-index:1;position: relative; align:center;">
+							<a href="mailto:zy@zhouzuyuan.cn">Contact developer</a>
+						</div>
 					</div> <!-- .cd-project-info -->
 				</li>
 				<li class="cd-single-project">
@@ -128,6 +145,12 @@
 						</p>
 						<br />
 						<a href="https://itunes.apple.com/us/app/fontshow/id1217361219?ls=1&mt=8"><div id="AppStore"></div></a>
+
+						<br />
+						<div style="z-index:1;position: relative; align:center;">
+							<a href="mailto:zy@zhouzuyuan.cn">Contact developer</a>
+						</div>
+
 					</div> <!-- .cd-project-info -->
 				</li>
 			</ul>
