--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <!--            </div>-->
 <!--    	</div>-->
 <!--    </section>-->
-<!--    <!--my team section end-->-->
+<!--    <!--my team section end-->
      <div class="counter-section"> <!-- counter section start -->
 		<div class="container">
 			    <div class="row">
