--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      		<div class="row">
      			<div class="col-md-8 col-sm-12">
      				<div class="contact-form-wrapper">
-						<form action="mailto:zy@zhouzyuan.cn">
+						<form action="mailto:zy@zhouzuyuan.cn">
      						<div class="row">
 <!--     							<div class="col-md-6 col-sm-12">-->
 <!--     								<input type="text" placeholder="Enter Name">-->
